--- a/templates/base.html
+++ b/templates/base.html
@@ -11,23 +11,23 @@
     {% endblock %}
     <style>
         body{
-            background-color: laven;
+            background-color: lavender;
         }
         .svg{
           transition: all 2s ease-in-out linear 1;
         }
         .svgs{
-            width: 400px;
-            height: 300px;
+            width: 300px;
+            height: 200px;
         }
         @media only screen and (max-width:900px){
           .svgs {
-            width: 300px
+            width: 200px
           };
         }
         @media only screen and (max-width:363px) {
           .svgs{
-            width: 200px;
+            width: 100px;
           }
         }
     </style>
